--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,13 +1,33 @@
 <?xml version="1.0"?>
 <ruleset name="LightSpeedWP">
-  <description>LightSpeed WP Coding Standards</description>
+  <description>LightSpeed WP Coding Standards for Theme</description>
+
+  <!-- Scan all PHP files in the current directory and subdirectories -->
   <file>./</file>
+
+  <!-- Exclude third-party dependencies -->
   <exclude-pattern>vendor/*</exclude-pattern>
   <exclude-pattern>node_modules/*</exclude-pattern>
+
+  <!-- Exclude build and temporary directories -->
+  <exclude-pattern>public/*</exclude-pattern>
+  <exclude-pattern>assets/dist/*</exclude-pattern>
+  <exclude-pattern>.tmp/*</exclude-pattern>
+  <exclude-pattern>.cache/*</exclude-pattern>
+
+  <!-- Exclude testing and development directories -->
+  <exclude-pattern>tests/*</exclude-pattern>
+  <exclude-pattern>test-results/*</exclude-pattern>
+  <exclude-pattern>playwright-report/*</exclude-pattern>
+  <exclude-pattern>coverage/*</exclude-pattern>
+  <exclude-pattern>resources/*</exclude-pattern>
+
+  <!-- Apply WordPress Coding Standards -->
   <rule ref="WordPress-Core"/>
   <rule ref="WordPress-Extra"/>
   <rule ref="WordPress-Docs"/>
-  <rule ref="WordPress-VIP"/>
+
+  <!-- Check PHP compatibility -->
   <rule ref="PHPCompatibilityWP"/>
-  <config name="testVersion" value="7.4-8.3"/>
+  <config name="testVersion" value="8.0-8.3"/>
 </ruleset>
